kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 531630-devsecops
  namespace: 531630-app
  labels:
    app: quoterxp
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: quoterxp
  template:
    metadata:
      labels:
        app: quoterxp
    spec:
      containers:
        - name: quoterxp
          image: rominjun/531630-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: 531630-regsec
