kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quoterxp-service
  namespace: 531630-app
spec:
  selector:
    app: quoterxp
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      nodePort: 30000
      targetPort: 5000
