kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-5000-only
  namespace: 531630-app
spec:
  podSelector:
    matchLabels:
      app: quoterxp
  policyTypes: ["Ingress"]
  ingress:
    - ports:
        - protocol: TCP
          port: 5000
